# ardu_ws

./: README.md  UAVSettings.params  bottom_calib.yaml  circleFlight_node.py  left_calib.yaml  vins_history.csv
src/goal_to_cmd_vel/: package.xml  setup.cfg  setup.py
src/goal_to_cmd_vel/goal_to_cmd_vel/: controller_node.py
src/mavros_examples/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mavros_examples/launch/: apm_pluginlist.yaml  mavros.launch.py  new_apm_config.yaml
src/mavros_examples/mavros_examples/: challenge2.1  challenge2.1.py  challenge2.2  challenge2or3.py  flight_task_control.py  flight_task_control2.py  flight_task_control3.py  flight_task_control4.py  flight_test.py  flight_test_v2.py  hover_test.py  send_cmd_vel.py  takeoff_and_wait.py  vel_pid.py
src/multicam/: CMakeLists.txt  package.xml
src/multicam/src/: multicam_node.cpp
src/pathfind_landing/: package.xml  setup.cfg  setup.py
src/pathfind_landing/pathfind_landing/: hybrid_landing.py  landing.py  naive_landing.py
src/pose_to_odom/: CMakeLists.txt  package.xml  pose_to_odom_no_twist.cpp
src/radio_coms/: package.xml  setup.cfg  setup.py
src/radio_coms/radio_coms/: uav_comms_node.py  ugv_comms_node.py
src/uav_aruco/: package.xml  setup.py
src/uav_aruco/launch/: aruco_multicam.launch.py
src/uav_aruco/scripts/: basic_aruco_detector.py
src/uav_aruco/uav_aruco/: uav_aruco_node.py
src/vicon_pkg/: package.xml  setup.cfg  setup.py
src/vicon_pkg/vicon_pkg/: vicon_node.py
src/vins_mav_pose/: CMakeLists.txt  package.xml  plot_vins_history.py
src/vins_mav_pose/src/: vins_mav_node.cpp
